--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.OCCPT"
         tools:targetApi="31">
         <activity
-            android:name=".IntroActivity"
+            android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.OCCPT.NoActionBar">
+            android:label="@string/app_name"
+            android:resizeableActivity="true"
+            android:theme="@style/Theme.OCCPT.NoActionBar"
+            tools:targetApi="24">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,12 +26,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".IntroActivity"
             android:exported="false"
-            android:label="@string/app_name"
-            android:resizeableActivity="true"
-            android:theme="@style/Theme.OCCPT.NoActionBar"
-            tools:targetApi="24" />
+            android:theme="@style/Theme.OCCPT.NoActionBar" />
     </application>
 
 </manifest>
